--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     background-color: pink;
-    color: lightgrey;
+    color: oldlace;
 }
 
 main {
