--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ main {
 
 section {
   margin-bottom: 20px;
-  background-color: lightpink;
+  background-color: rgb(250, 148, 163);
   padding: 15px 20px;
   border-radius: 8px;
   box-shadow: plum;
