--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
+:root {
+    --cor-fundo: #ffc0cb;
+    --cor-principal: #fdf5e6;
+    --cor-secundaria: #fa94a3;
+    --cor-destaque: #dda0dd;
+    --cor-texto: #f8c8ee;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background-color: pink;
-    color: oldlace;
+    background-color: #ffc0cb;
+    color: #fdf5e6;
 }
 
 main {
@@ -11,10 +19,10 @@ main {
 
 section {
   margin-bottom: 20px;
-  background-color: rgb(250, 148, 163);
+  background-color: #fa94a3;
   padding: 15px 20px;
   border-radius: 8px;
-  box-shadow: plum;
+  box-shadow: #dda0dd;
 }
 
 section p {
