--- a/style.css
+++ b/style.css
@@ -15,3 +15,22 @@ body {
     align-items: center;
     min-height: 100vh;
 }
+
+main {
+  padding: 20px;
+}
+
+section {
+  margin-bottom: 20px;
+  background-color: #fa94a3;
+  padding: 15px 20px;
+  border-radius: 8px;
+  box-shadow: #dda0dd;
+}
+
+section p {
+  line-height: 1.6;
+  text-align: justify;
+  font-size: 1.05em;
+  margin-bottom: 12px;
+}
