--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
     --cor-fundo: #ffc0cb;
     --cor-principal: #fdf5e6;
-    --cor-secundaria: #fa94a3;
-    --cor-destaque: #dda0dd;
+    --cor-secundaria: #eda0dc;
+    --cor-destaque: #fa94a3;
     --cor-texto: #f8c8ee;
 }
 
