--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .caixa-principal{
-  background-color: #fa94a3;
+  background-color: #fdf5e6;
   width: 90%;
   text-align:center;
   padding: 20%;
