--- a/style.css
+++ b/style.css
@@ -26,3 +26,16 @@ body {
 h1{
   color: var(--cor-destaque);
 }
+
+button {
+  background-color: var(--cor-secundaria);
+  color: var(--cor-texto);
+  border: none;
+  border-radius: 15px;
+  transition; background-color: 0.3s;
+}
+
+button:houver{
+  background-color: var(--cor-destaque);
+  color: var(--cor-principal);
+}
