--- a/style.css
+++ b/style.css
@@ -1,41 +1,41 @@
 :root {
-    --cor-fundo: #ffc0cb;
-    --cor-principal: #fdf5e6;
-    --cor-secundaria: #eda0dc;
-    --cor-destaque: #fa94a3;
-    --cor-texto: #f8c8ee;
+    --bg: #01080E;
+    --primary: #0B0D20;
+    --secondary: #212333;
+    --highlight: #2BDEFD;
+    --text: #D7F9FF;
 }
 
 body {
-    background-color: var(#ffc0cb);
-    --cor-texto: #f8c8ee;
-    color: var();
+    background-color: var(--bg);
+    color: var(--text);
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
 }
 
-.caixa-principal{
-  background-color: #fdf5e6;
-  width: 90%;
-  text-align:center;
-  padding: 20%;
+.caixa-principal {
+    background-color: var(--primary);
+    width: 90%;
+    text-align: center;
+    padding: 20px;
 }
 
-h1{
-  color: var(--cor-destaque);
+h1 {
+    color: var(--highlight);
 }
 
 button {
-  background-color: var(--cor-secundaria);
-  color: var(--cor-texto);
-  border: none;
-  border-radius: 15px;
-  transition; background-color: 0.3s;
+    background-color: var(--secondary);
+    color: var(--text);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;
+    transition: background-color 0.3s;
 }
 
-button:houver{
-  background-color: var(--cor-destaque);
-  color: var(--cor-principal);
+button:hover {
+    background-color: var(--highlight);
+    color: var(--primary);
 }
