--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --primary: #ff359a;
     --secondary: #ff9bcd;
     --highlight: #ffe9f4;
-    --text: #b91266;
+    --text: #fffbfd;
 }
 
 body {
