--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --bg: #fee3f0;
-    --primary: #ff75ba;
+    --primary: #fb5fad;
     --secondary: #ff9bcd;
     --highlight: #ffe9f4;
     --text: #fffbfd;
